apps/radicale/k8s/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radicale

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  labels:
    app: radicale
  annotations:
    secrets.infisical.com/auto-reload: 'true'
    configmap.reloader.stakater.com/reload: radicale-config
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      securityContext:
        runAsUser: 2999
        runAsGroup: 2999
        fsGroup: 2999
        runAsNonRoot: true
      containers:
        - name: radicale
          image: tomsquest/docker-radicale:3.7.6.0
          ports:
            - containerPort: 5232
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: users
              mountPath: /etc/radicale
              readOnly: true
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: '25m'
              memory: '64Mi'
            limits:
              memory: '256Mi'
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-auth
            items:
              - key: HTPASSWD_USERS
                path: users
        - name: data
          persistentVolumeClaim:
            claimName: radicale-data

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radicale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dav.inevitable.fyi`)
      kind: Rule
      services:
        - name: radicale
          port: 80
  tls:
    secretName: radicale-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radicale-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dav.inevitable.fyi`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: default
      services:
        - name: radicale
          port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: radicale
  labels:
    app: radicale
spec:
  type: ClusterIP
  selector:
    app: radicale
  ports:
    - name: http
      port: 80
      targetPort: http
